用 puppteer 获取内容 js 抓取内容

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "symfony/dom-crawler": "^5.4",
-        "symfony/css-selector": "^5.4"
+        "symfony/css-selector": "^5.4",
+        "nesk/puphpeteer": "^2.0"
     }
 }
